# dature

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  SECURITY.md  context7.json  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: arch.md  done.md  new-source.md
.github/: dependabot.yml  labeler.yml
.github/workflows/: changelog.yml  ci.yml  dependency-review.yml  docs.yml  new-event.yml  publish.yml  release.yml  scorecard.yml
changes/: +apply-source-init-params-once.refactor  +common-loading.refactor  +concrete-sources-exported.feature  +config-search.feature.md  +docs-fixes.doc.md  +docs-tuning.doc  +envfile-system-search.bugfix  +example-line-length.refactor  +example-placeholders.bugfix.md  +file-path-expansion.feature  +first-found-pre-load.bugfix  +fix-merge-conflict-filecontent.bugfix  +import-style.refactor  +inline-examples.doc  +internal-enum-hints.refactor  +lazy-json5-import.bugfix.md  +loading-section.doc  +masking.feature  +merge-config-public.refactor  +multiline-caret.feature  +nested-sep-parameter.doc  +normalize-metadata-naming.refactor  +per-platform-system-dirs.feature  +pluggable-merge-strategies.feature.md  +raise-conflict-self-contained.refactor  +remove-get-system-config-dirs.removal  +remove-loader-protocol.removal  +remove-merge-class.refactor  +remove-source-masking-fields.removal  +remove-source-mutations.refactor  +removed-legacy-validators.removal  +rename-display-name.refactor  +rename-file-param.refactor  +rename-sources-loader-package.refactor  +rename-split-symbols-to-nested-sep.removal  +retort-factory.refactor  +separate-adaptix-helpers-from-base.refactor  +show-value-in-errors.feature  +simplify-config-paths.refactor  +simplify-configure.refactor  (+17 more)
docs/: advanced.md  api-reference.md  changelog.md  index.md  introduction.md  loading.md  masking.md  merging.md  naming.md  supported_types.md  validation.md  why-not-dynaconf.md  why-not-hydra.md  why-not-pydantic-settings.md
docs/advanced/: caching.md  config-search.md  configure.md  custom_types.md  debug.md  env-expansion.md  field-groups.md  merge-rules.md  nested-resolve.md  special-types.md
docs/comparison/: why-not-dynaconf.md  why-not-hydra.md  why-not-pydantic-settings.md
docs/features/: cli.md  cli_source.md  configure.md  masking.md  merging.md  naming.md  validation.md
docs/getting_started/: index.md  introduction.md
docs/javascript/: readthedocs.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/: all_types_dataclass.py  load_all_formats.py  load_from_docker_secrets.py  load_from_environ.py  load_from_ini.py  load_from_json5.py  load_from_toml.py  load_from_yaml12.py
examples/docs/: advanced_caching.py  advanced_configure.py  advanced_configure_env.py  advanced_debug_error.py  advanced_debug_logging.py  advanced_debug_report.py  advanced_env_expansion.py  advanced_env_expansion_merge.py  advanced_env_expansion_strict.py  advanced_field_groups_error.py  advanced_field_groups_expansion.py  advanced_field_groups_expansion_error.py  advanced_field_groups_multiple.py  advanced_field_groups_multiple_error.py  advanced_field_groups_nested.py  advanced_field_groups_nested_error.py  advanced_merge_rules.py  advanced_merge_rules_callable.py  advanced_merge_rules_conflict.py  advanced_special_types.py  custom_type.py  format_docker.py  format_env.py  format_ini.py  format_json.py  format_json5.py  format_toml.py  format_yaml.py  intro_all_formats.py  intro_decorator.py  intro_decorator_file.py  intro_function.py  masking_by_name.py  masking_configure.py  masking_heuristic.py  masking_secret_str.py  merging_basic.py  merging_field_append.py  merging_field_append_unique.py  merging_field_first_wins.py  (+23 more)
examples/sources/: all_types.env  all_types.ini  all_types.json  all_types.json5  all_types_toml10.toml  all_types_toml11.toml  all_types_yaml11.yaml  all_types_yaml12.yaml
src/dature/: __init__.py  _descriptors.py  config.py  config_paths.py  field_path.py  load_report.py  main.py  metadata.py  mypy_plugin.py  protocols.py  skip_field_provider.py  type_utils.py  types.py
tests/: test_config.py  test_config_paths.py  test_custom_loader.py  test_examples.py  test_field_path.py  test_load_report.py  test_main.py  test_optional_deps.py  test_type_loaders.py  test_type_utils.py
tests/cli/: conftest.py  test_inspect.py  test_parsing.py
tests/errors/: test_exceptions.py  test_fixtures.py  test_formatter.py  test_location.py
tests/expansion/: test_env_expand.py  test_expand_file_path.py
tests/fixtures/: env_expand_strict.env  env_expand_strict.ini  env_expand_strict.json  env_expand_strict.toml  env_expand_strict.yaml
tests/loaders/: test_base.py  test_common.py  test_json5_.py  test_toml_.py  test_yaml_.py
tests/loading/: test_context.py  test_field_merges.py  test_loading_common.py  test_multi.py  test_resolver.py  test_single.py  test_skip_invalid_fields.py  test_source_loading.py
tests/masking/: test_detection.py  test_masking.py
tests/merging/: test_deep_merge.py  test_field_group.py  test_predicate.py
tests/path_finders/: test_ini.py  test_json.py  test_json5.py  test_toml.py  test_yaml.py
tests/sources/: __init__.py  test_argparse_.py  test_base.py  test_cli_base.py  test_docker_secrets.py  test_env_.py  test_ini_.py  test_json5_.py  test_json_.py  test_nested_resolve.py  test_retort.py  test_toml10_.py  test_toml11_.py  test_yaml11_.py  test_yaml12_.py
tests/sources_loader/: checker.py  test_base.py  test_docker_secrets.py  test_env_.py  test_ini_.py  test_json5_.py  test_json_.py  test_nested_resolve.py  test_toml10_.py  test_toml11_.py  test_yaml11_.py  test_yaml12_.py
tests/strategies/: test_field_strategies.py  test_resolve.py  test_source_strategies.py
tests/validators/: test_collection.py  test_compare.py  test_complex.py  test_composition.py  test_custom.py  test_custom_validator.py  test_metadata_validators.py  test_number.py  test_post_init_and_property.py  test_root_validator.py  test_sequence.py  test_string.py  test_text.py  test_v.py  test_v_each.py  test_v_root.py  (+2 more)
(+355 files in other folders)
