[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dature"
version = "0.11.0"
description = "Type-safe configuration loader for Python dataclasses with support for YAML, JSON, TOML, INI, ENV and environment variables"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Niccolum", email = "lastsal@mail.ru" },
]
keywords = [
    "configuration",
    "config",
    "dataclass",
    "type-safe",
    "yaml",
    "json",
    "json5",
    "toml",
    "ini",
    "env",
    "settings",
    "loader",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
dependencies = [
    "adaptix>=3.0.0b11",
]

[project.urls]
Homepage = "https://github.com/Niccolum/dature"
Repository = "https://github.com/Niccolum/dature"
Issues = "https://github.com/Niccolum/dature/issues"
Documentation = "https://dature.readthedocs.io/"

[project.optional-dependencies]
yaml = ["ruamel.yaml>=0.18"]
json5 = ["json-five>=1.1.2"]
toml = ["toml-rs>=0.3.4"]
secure = ["random-string-detector>=1.1.1"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "ANN204", # missing return type for __init__
    "SIM108", # ternary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert
    "ANN",     # type annotations
    "SLF001",  # private member access
    "DTZ001",  # datetime without tzinfo
    "PLR2004", # magic values in tests
    "S105",    # possible hardcoded password
    "FBT001",  # boolean argument in function definition
]
"examples/**/*.py" = [
    "INP001",  # implicit namespace package
    "T201",    # print
    "S105",    # possible hardcoded password
    "DTZ001",  # datetime without tzinfo
    "PLR2004", # magic values in examples
    "SIM103",  # return condition directly
    "S104",    # possible hardcoded password
]

[tool.ruff.lint.pylint]
max-args = 6
max-returns = 8

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def", "arg-type", "call-overload", "func-returns-value", "call-arg", "attr-defined", "index"]

[[tool.mypy.overrides]]
module = "examples.*"
disable_error_code = ["arg-type", "call-overload", "dict-item"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [
    "src",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.3.5",
    "ruff>=0.14.14",
    "prek>=0.3.1",
    "tzdata>=2024.1; sys_platform == 'win32'",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6",
    "mkdocs-macros-plugin>=1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-llmstxt>=0.5",
    "pymdown-extensions>=10.7",
]
