[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dature"
dynamic = ["version"]
description = "Type-safe configuration loader for Python dataclasses with support for YAML, JSON, TOML, INI, ENV and environment variables"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Niccolum", email = "lastsal@mail.ru" },
]
keywords = [
    "configuration",
    "config",
    "dataclass",
    "type-safe",
    "yaml",
    "json",
    "json5",
    "toml",
    "ini",
    "env",
    "settings",
    "loader",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
dependencies = [
    "adaptix>=3.0.0b11",
]

[project.urls]
Homepage = "https://github.com/reagento/dature"
Repository = "https://github.com/reagento/dature"
Issues = "https://github.com/reagento/dature/issues"
Documentation = "https://dature.readthedocs.io/"

[project.optional-dependencies]
yaml = ["ruamel.yaml>=0.18"]
json5 = ["json-five>=1.1.2"]
toml = ["toml-rs>=0.3.4"]
secure = ["random-string-detector>=1.1.1"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dature/_version.py"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "ANN204", # missing return type for __init__
    "SIM108", # ternary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert
    "ANN",     # type annotations
    "SLF001",  # private member access
    "DTZ001",  # datetime without tzinfo
    "PLR2004", # magic values in tests
    "S105",    # possible hardcoded password
    "FBT001",  # boolean argument in function definition
]
"src/dature/loaders/*.py" = [
    "FBT001",  # loader functions accept bool as scalar value, not as a flag
]
"docs/generate_*.py" = [
    "INP001",  # implicit namespace package
    "T201",    # print (CLI script)
    "S310",    # URL open audit (hardcoded https)
    "BLE001",  # blind exception (graceful fallback)
]
"examples/**/*.py" = [
    "INP001",  # implicit namespace package
    "T201",    # print
    "S105",    # possible hardcoded password
    "DTZ001",  # datetime without tzinfo
    "PLR2004", # magic values in examples
    "SIM103",  # return condition directly
    "S104",    # possible hardcoded password
    "ERA001",  # commented-out code
    "S101",    # assert
    "PT017",   # assertion on exception in except block
    "E501",    # line too long
    "TRY003",  # raise-vanilla-args
    "EM101",   # raw-string-in-exception 
]

[tool.ruff.lint.pylint]
max-args = 6
max-returns = 8

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
explicit_package_bases = true
mypy_path = "src:."
plugins = ["dature.mypy_plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def", "arg-type", "call-overload", "func-returns-value", "call-arg", "attr-defined", "index"]

[[tool.mypy.overrides]]
module = "examples.*"
disable_error_code = ["arg-type", "call-overload", "dict-item"]

[tool.coverage.run]
source = ["dature"]
omit = ["src/dature/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [
    "src",
]

[tool.towncrier]
package = "dature"
package_dir = "src"
directory = "changes"
filename = "CHANGELOG.md"
title_format = "## {version}"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/reagento/dature/issues/{issue})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Docs"
showcontent = true

[[tool.towncrier.type]]
directory = "refactor"
name = "Refactoring"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.3.5",
    "ruff>=0.14.14",
    "prek>=0.3.1",
    "towncrier>=24.8",
    "tzdata>=2024.1; sys_platform == 'win32'",
    "pytest-cov>=7.1.0",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6",
    "mkdocs-macros-plugin>=1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-llmstxt>=0.5",
    "mkdocs-minify-plugin>=0.8",
    "pillow>=10.0",
    "cairosvg>=2.7; sys_platform == 'linux'",
    "pymdown-extensions>=10.7",
]
